--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
    </nav>
    
-<header class="bg-light py-5" id="header" style="background-image:url(/holitels-frontend/main/css/pexels-pixabay-38238.jpg)">
+<header class="bg-light py-5" id="header" style="background-image:url(https://plus.unsplash.com/premium_photo-1687960116497-0dc41e1808a2?q=80&w=2071&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)">
     <div class="container text-center"  style="padding-top: 100px; ">
       <h1 class="display-5 fw-bold">Holitels'e Hoş Geldiniz</h1>
       <p class="lead">En uygun otelleri kolayca arayın, filtreleyin ve rezervasyon yapın.</p>
