--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
    </nav>
    
-<header class="bg-light py-5" id="header" style="background-image:url(https://plus.unsplash.com/premium_photo-1687960116497-0dc41e1808a2?q=80&w=2071&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)">
+<header class="bg-light py-5" id="header" style="background-image:url(https://media.istockphoto.com/id/1405967253/tr/foto%C4%9Fraf/luxury-beach-sea-view-hotel-and-resort-santorini-style-3d-rendering.jpg?s=2048x2048&w=is&k=20&c=8AZ1Acg9L3neCiB1BXsX2ty7hJ60i6lkczYRiT32HzQ=)">
     <div class="container text-center"  style="padding-top: 100px; ">
       <h1 class="display-5 fw-bold">Holitels'e Hoş Geldiniz</h1>
       <p class="lead">En uygun otelleri kolayca arayın, filtreleyin ve rezervasyon yapın.</p>
